# aria

./: .gitignore  CLAUDE.md  CLAUDE_zh.md  GETTING_STARTED.md  GETTING_STARTED_zh.md  INSTALL.md  INSTALL_zh.md  LICENSE  README.md  README_zh.md  TIPS_FOR_CURSOR.md  TIPS_FOR_CURSOR_zh.md  TODO.md  TODO_zh.md  pyproject.toml  sync_claude_prompts.sh
.github/prompts/: academic-code-implementation_zh.prompt.md  academic-experiment-analysis_zh.prompt.md  academic-gradio-app.prompt.md  academic-preprocess.prompt.md  academic-preprocess_zh.prompt.md  academic-raw-data-analysis.prompt.md  academic-research-plan_zh.prompt.md  academic-research-report.prompt.md  academic-research-report_zh.prompt.md  git-git-commit.prompt.md  python-code-check.prompt.md  python-code-check_zh.prompt.md  python-setup-environment_zh.prompt.md
.github/workflows/: sync-to-gitee.yml
data/output/: execution_summary.txt
data/processed/: usedcars_clean.csv  usedcars_profile.json
docs/: 00-project-structure.md  00-project-structure_zh.md  01-basic-information.md  02-raw-data-analysis.md  03-preprocess-plan.md  04-processed-data-analysis.md  05-research-plan.md  06-implementation-docs.md  07-execution-instructions.md  09-experiment-report.md  10-cover-letter.md  10-manuscript-supplement.md  10-manuscript.md
docs/08-experiment-results/: figures.md  metrics.json.md  run_experiment.log.md
output/paper/: index.html  (+1 more)
scripts/: export_paper.py  generate_summary.py  preprocess_usedcars.py  run_experiment.py
src/: evaluation.py  feature_engineering.py  models.py  pipeline.py  utils.py  visualization.py
(+72 files in other folders)
