[project]
name = "usedcar-sa-pricing"
version = "0.1.0"
description = "Code and manuscript for used car price modeling in Saudi Arabia"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Saleh alhuqayl" }
]
dependencies = [
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
    "markdown>=3.7",
]
